--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="FlashCryptoSenders - Secure, fast crypto sending platform with enhanced security features like Auto-login by IP and blockchain solutions.">
+  <meta name="author" content="Likhon Sheikh (@likhonsheikh54)">
+  <meta name="robots" content="index, follow">
+  <meta name="keywords" content="CryptoSenders, Blockchain, Auto-login, Crypto Solutions, FlashCryptoSenders, Binance, Crypto Security, Digital Security">
+
+  <!-- Open Graph Metadata -->
+  <meta property="og:title" content="FlashCryptoSenders - Crypto Solutions">
+  <meta property="og:description" content="Send crypto securely with FlashCryptoSenders. Auto-login by IP and manual confirmation for enhanced security.">
+  <meta property="og:url" content="https://flash-crypto-senders.github.io/">
+  <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Bitcoin_logo.svg/1200px-Bitcoin_logo.svg.png">
+
+  <title>FlashCryptoSenders - Crypto Solutions</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Bitcoin_logo.svg/1200px-Bitcoin_logo.svg.png" type="image/x-icon">
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "url": "https://flash-crypto-senders.github.io/",
+      "name": "FlashCryptoSenders",
+      "description": "A crypto sending platform with auto-login by IP and enhanced security",
+      "publisher": {
+        "@type": "Organization",
+        "name": "FlashCryptoSenders",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://upload.wikimedia.org/wikipedia/commons/thumb/1/1f/Bitcoin_logo.svg/1200px-Bitcoin_logo.svg.png"
+        }
+      }
+    }
+  </script>
+
+  <!-- Link to main CSS -->
+  <link rel="stylesheet" href="styles/main.css">
+  <!-- Link to animations CSS -->
+  <link rel="stylesheet" href="styles/animations.css">
+
+</head>
+
+<body>
+  <header>
+    <div class="hero-section">
+      <h1>Welcome to FlashCryptoSenders</h1>
+      <p>Your trusted crypto sender platform with enhanced security</p>
+      <a href="/release/updates?v1.0.0.html" class="cta-button">Check Our Latest Update</a>
+    </div>
+  </header>
+
+  <section id="partners" class="partners">
+    <h2>Our Trusted Partners</h2>
+    <div class="partner-slider">
+      <!-- Public images via Wikimedia or other public sources -->
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4e/Binance_Logo.svg/1200px-Binance_Logo.svg.png" alt="Binance" width="200" height="auto">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/Ethereum_logo_2014.svg" alt="Ethereum" width="200" height="auto">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a2/Chainlink_Logo.svg/1200px-Chainlink_Logo.svg.png" alt="Chainlink" width="200" height="auto">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/8/8d/Polkadot_logo_2020.svg" alt="Polkadot" width="200" height="auto">
+    </div>
+  </section>
+
+  <section id="terminal" class="terminal-animations">
+    <h2>Experience the Future of Crypto</h2>
+    <div id="terminal-container">
+      <div class="terminal-window">
+        <p class="terminal-output">Initializing FlashCryptoSenders...</p>
+        <p class="terminal-output">Connecting to Blockchain...</p>
+        <p class="terminal-output">Security Features Activated...</p>
+        <p class="terminal-output">Ready to Send Crypto Securely!</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2025 FlashCryptoSenders. All rights reserved.</p>
+    <p>Follow us on GitHub: <a href="https://github.com/flash-crypto-senders">@likhonsheikh54</a></p>
+  </footer>
+
+  <script src="assets/scripts/telegram-widget.js"></script>
+  <script src="assets/scripts/terminal-animations.js"></script>
+</body>
+
+</html>
