--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FlashCryptoSenders - Instant & Secure Crypto Transfers 2025</title>
     
     <!-- Enhanced SEO Meta Tags -->
-    <meta name="description" content="Official Flash USDT Tool 2025 - Fast, secure cryptocurrency sending platform. Instant transfers for BTC, USDT, and ETH with enhanced security features. Best crypto sender tool with instant confirmation.">
-    <meta name="keywords" content="flash btc, flash usdt, flash eth, crypto sender, instant transfers, secure transactions, flash usdt tool 2025, crypto tutorial, blockchain testing, flash crypto sender, btc sender, eth sender, usdt sender, crypto tools 2025">
+    <meta name="description" content="Official Flash USDT Tool 2025 - Lightning-fast, secure cryptocurrency sending platform. Instant transfers for BTC, USDT, ETH, BNB, SOL with enhanced security features. Best crypto sender tool with instant confirmation.">
+    <meta name="keywords" content="flash btc, flash usdt, flash eth, crypto sender, instant transfers, secure transactions, flash usdt tool 2025, crypto tutorial, blockchain testing, flash crypto sender, btc sender, eth sender, usdt sender, crypto tools 2025, pancakeswap alternative, defi platform">
     <meta name="author" content="FlashCryptoSenders Team">
     <meta name="robots" content="index, follow">
     <meta name="last-modified" content="">
@@ -25,37 +25,45 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://flashcrypto.vercel.app/">
     <meta property="og:title" content="FlashCryptoSenders - Instant & Secure Crypto Transfers 2025">
-    <meta property="og:description" content="Official Flash USDT Tool 2025 - Fast, secure cryptocurrency sending platform with instant confirmation.">
+    <meta property="og:description" content="Official Flash USDT Tool 2025 - Lightning-fast, secure cryptocurrency sending platform with instant confirmation. Best alternative to traditional DEX platforms.">
     <meta property="og:image" content="https://flashcrypto.vercel.app/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://flashcrypto.vercel.app/">
     <meta property="twitter:title" content="FlashCryptoSenders - Instant & Secure Crypto Transfers 2025">
-    <meta property="twitter:description" content="Official Flash USDT Tool 2025 - Fast, secure cryptocurrency sending platform with instant confirmation.">
+    <meta property="twitter:description" content="Official Flash USDT Tool 2025 - Lightning-fast, secure cryptocurrency sending platform with instant confirmation. Best alternative to traditional DEX platforms.">
     <meta property="twitter:image" content="https://flashcrypto.vercel.app/twitter-image.jpg">
 
     <style>
         :root {
-            --primary-color: #0070f3;
-            --secondary-color: #00a8ff;
+            --primary-color: #1fc7d4;
+            --secondary-color: #7645d9;
             --accent-color: #ff4d4d;
-            --success-color: #00c853;
-            --background-color: #f0f2f5;
-            --text-color: #333;
+            --success-color: #31d0aa;
+            --background-color: #08060b;
+            --card-background: #27262c;
+            --text-color: #f4eeff;
             --light-text: #fff;
-            --dark-bg: #1a1a1a;
+            --dark-text: #280d5f;
+        }
+        .light {
+            --background-color: #faf9fa;
+            --card-background: #ffffff;
+            --text-color: #280d5f;
         }
         * { box-sizing: border-box; margin: 0; padding: 0; }
         body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-family: 'Kanit', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             line-height: 1.6;
             color: var(--text-color);
             background-color: var(--background-color);
+            transition: background-color 0.3s ease;
         }
         .container { width: 90%; max-width: 1200px; margin: 0 auto; padding: 20px; }
         header {
-            background-color: var(--primary-color);
+            background-color: rgba(21, 17, 34, 0.9);
+            backdrop-filter: blur(10px);
             color: var(--light-text);
             padding: 1rem 0;
             position: fixed;
@@ -79,10 +87,10 @@
             color: var(--light-text);
             text-decoration: none;
             font-weight: 500;
-            transition: opacity 0.3s ease;
+            transition: color 0.3s ease;
         }
         nav a:hover {
-            opacity: 0.8;
+            color: var(--primary-color);
         }
         .hero {
             background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
@@ -114,6 +122,7 @@
         .btn:hover {
             transform: translateY(-2px);
             box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            background-color: #ff6b6b;
         }
         .video-container {
             margin: 3rem 0;
@@ -154,39 +163,47 @@
             padding: 1rem;
             background: rgba(255,255,255,0.1);
             border-radius: 10px;
-            transition: transform 0.3s ease;
+            transition: all 0.3s ease;
         }
         .crypto-icon:hover {
             transform: translateY(-5px);
+            background: rgba(255,255,255,0.2);
         }
         .crypto-icon i {
             font-size: 2.5rem;
-            background: -webkit-linear-gradient(45deg, #ff6b6b, #ffb347);
+            background: -webkit-linear-gradient(45deg, var(--primary-color), var(--secondary-color));
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
         .swap-interface {
-            background-color: var(--light-text);
+            background-color: var(--card-background);
             border-radius: 20px;
             padding: 2rem;
             box-shadow: 0 4px 6px rgba(0,0,0,0.1);
             margin: 2rem 0;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .swap-interface:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         }
         .swap-interface input {
             width: 100%;
             padding: 1rem;
             margin: 1rem 0;
-            border: 2px solid #eee;
+            border: 2px solid #3c3742;
             border-radius: 10px;
             font-size: 1.1rem;
             transition: border-color 0.3s ease;
+            background-color: #372f47;
+            color: var(--light-text);
         }
         .swap-interface input:focus {
             outline: none;
             border-color: var(--primary-color);
         }
         .roi-display {
-            background: #f8f9fa;
+            background: #372f47;
             padding: 1rem;
             border-radius: 10px;
             margin: 1rem 0;
@@ -196,7 +213,7 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            background-color: var(--light-text);
+            background-color: var(--card-background);
             padding: 2rem;
             border-radius: 20px;
             box-shadow: 0 10px 25px rgba(0,0,0,0.2);
@@ -215,7 +232,7 @@
             z-index: 1000;
         }
         footer {
-            background-color: var(--dark-bg);
+            background-color: #151122;
             color: var(--light-text);
             padding: 3rem 0 2rem;
             margin-top: 4rem;
@@ -252,6 +269,17 @@
         .social-links a:hover {
             color: var(--primary-color);
         }
+        .theme-toggle {
+            background: none;
+            border: none;
+            color: var(--light-text);
+            font-size: 1.5rem;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+        .theme-toggle:hover {
+            color: var(--primary-color);
+        }
         @media (max-width: 768px) {
             .hero h1 { font-size: 2rem; }
             nav ul { display: none; }
@@ -271,6 +299,9 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
+            <button class="theme-toggle" onclick="toggleTheme()">
+                <i class="fas fa-moon"></i>
+            </button>
         </nav>
     </header>
 
@@ -485,6 +516,17 @@
             
             document.querySelector('meta[name="last-modified"]').setAttribute('content', lastModified);
             document.querySelector('meta[name="access-key"]').setAttribute('content', accessKey);
+        }
+
+        // Theme toggle
+        function toggleTheme() {
+            document.documentElement.classList.toggle('light');
+            const themeIcon = document.querySelector('.theme-toggle i');
+            if (document.documentElement.classList.contains('light')) {
+                themeIcon.classList.replace('fa-moon', 'fa-sun');
+            } else {
+                themeIcon.classList.replace('fa-sun', 'fa-moon');
+            }
         }
 
         // Initialize
